Implemented angular in newsfeed, marks and attendance

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -34,6 +34,7 @@ a:hover {
 
 .news-feed {
 	margin: 5px 10px 25px 0;
+	padding: 10px 15px 20px 10px;
 	box-shadow: 0 0 10px 10px #f2f2f2;
 	background-color: #00ff12;
 }
@@ -66,6 +67,14 @@ a:hover {
 .marks-table > thead, .attendance-table > thead, .timetable-table > thead {
 	background-color: #00bd0d;
 	color: #ffffff;
+}
+
+tbody > tr:hover {
+	color: #00007b;
+}
+
+tbody > tr >td:hover {
+	font-weight: bold;
 }
 
 .footer {
