--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -18,9 +18,50 @@ a:hover {
 
 .student-details{
 	margin: 5px 10px 5px 0px;
-	padding: 10px 20px 20px 5px;
+	padding: 10px 20px 20px 10px;
 	box-shadow: 0 0 10px 10px #f2f2f2;
 	background-color: #ffffff;
+}
+.login {
+	margin: 5px 10px 5px 0px;
+	padding: 10px 20px 20px 10px;
+	text-align: center;
+	background-color: #ffffff;
+	box-shadow: 0 0 13px 0 #f2f2f2;
+	float: right;
+}
+
+.login > form > input[type="text"], input[type="password"] {
+	font-size: 18px;
+	width: 100%;
+	padding: 1px 6px 1px 6px;
+	margin: 5px 5px 5px 5px;
+	box-sizing: border-box;
+	border: 0px;
+	box-shadow: 0 0 3px 2px #707070;
+	-webkit-transition: box-shadow 0.4s ease-in-out;
+	transition: box-shadow 0.4s ease-in-out;
+}
+
+.login > form > input[type="text"]:focus, input[type="password"]:focus {
+	box-shadow: 0 0 3px 2px #0066ff;
+}
+
+.login > form > input[type="submit"] {
+	font-size: 18px;
+	width: 100%;
+	padding: 1px 6px 1px 6px;
+	margin: 5px 5px 5px 5px;
+	border: 0;
+	background-color: #0078ff;  
+	border: 2px solid #2e8fff;
+	color: #ffffff;
+	-webkit-transition: background-color 0.2s ease-in-out;
+	transition: background-color 0.2s ease-in-out;
+}
+
+.login > form > input[type="submit"]:hover{
+	background-color: #004da6;
 }
 
 .student-details > h1 {
@@ -33,8 +74,8 @@ a:hover {
 }
 
 .news-feed {
-	margin: 5px 10px 25px 0;
-	padding: 10px 15px 20px 10px;
+	margin: 5px 10px 15px 0;
+	padding: 10px 15px 5px 10px;
 	box-shadow: 0 0 10px 10px #f2f2f2;
 	background-color: #00ff12;
 }
@@ -73,7 +114,7 @@ tbody > tr:hover {
 	color: #00007b;
 }
 
-tbody > tr >td:hover {
+tbody > tr > td:hover {
 	font-weight: bold;
 }
 
